--- a/src/FlaUInspect/FlaUInspect.csproj
+++ b/src/FlaUInspect/FlaUInspect.csproj
@@ -9,7 +9,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>FlaUInspect</RootNamespace>
     <AssemblyName>FlaUInspect</AssemblyName>
-    <TargetFrameworkVersion>v4.7.1</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <WarningLevel>4</WarningLevel>
@@ -43,6 +43,19 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Accessibility" />
+    <Reference Include="FlaUI.Core">
+      <HintPath>..\..\..\FlaUI\src\FlaUI.Core\bin\Release\net48\FlaUI.Core.dll</HintPath>
+    </Reference>
+    <Reference Include="FlaUI.UIA2">
+      <HintPath>..\..\..\FlaUI\src\FlaUI.UIA2\bin\Release\net48\FlaUI.UIA2.dll</HintPath>
+    </Reference>
+    <Reference Include="FlaUI.UIA3">
+      <HintPath>..\..\..\FlaUI\src\FlaUI.UIA3\bin\Release\net48\FlaUI.UIA3.dll</HintPath>
+    </Reference>
+    <Reference Include="Interop.UIAutomationClient">
+      <HintPath>..\..\..\FlaUI\src\FlaUI.UIA3\bin\Release\net48\Interop.UIAutomationClient.dll</HintPath>
+      <EmbedInteropTypes>True</EmbedInteropTypes>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
@@ -174,14 +187,6 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Resources\Calendar.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <PackageReference Include="FlaUI.UIA2">
-      <Version>3.2.0</Version>
-    </PackageReference>
-    <PackageReference Include="FlaUI.UIA3">
-      <Version>3.2.0</Version>
-    </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
